# DicomNiftiUploader

./: .gitignore  CMakeLists.txt  README.md
DicomNiftiModule/: CMakeLists.txt  DicomNiftiModule.py
DicomNiftiModule/Resources/UI/: DicomNiftiModule.ui
